maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:43: error: Boolean does not take parameters
  else (Dirr==1){
                ^